# de_sdk_infer

./: CMakeLists.txt  Makefile  README.md  config.ini  config.ini.detector  config.ini.segment
common/inc/: detector.h  model.h  platform.h
config_parser/: CMakeLists.txt
config_parser/config/: handler.h
detector/: CMakeLists.txt
detector/src/: CMakeLists.txt  detector.cpp
detector/src/EfficientDet/: CMakeLists.txt
detector/src/EfficientDet/inc/: efficientdet.h
detector/src/EfficientDet/src/: efficientdet.cpp
detector/src/tiny_yolov3/: CMakeLists.txt
detector/src/tiny_yolov3/inc/: tiny_yolov3.h
detector/src/tiny_yolov3/src/: tiny_yolov3.cpp
detector/src/yolov3/: CMakeLists.txt
detector/src/yolov3/inc/: yolov3.h
detector/src/yolov3/src/: yolov3.cpp
detector/src/yolov4/: CMakeLists.txt
detector/src/yolov4/inc/: yolov4.h
detector/src/yolov4/src/: yolov4.cpp
detector/src/yolov5/: CMakeLists.txt
detector/src/yolov5/inc/: yolov5.h
detector/src/yolov5/src/: yolov5.cpp
platform/: CMakeLists.txt
platform/inc/: target.h
platform/src/: CMakeLists.txt  target.cpp
platform/src/ambarella/: CMakeLists.txt
platform/src/ambarella/inc/: ambarella.h
platform/src/ambarella/src/: ambarella.cpp  ambas_imgproc_arch.h  basetypes.h  cavalry_gen.h  cavalry_ioctl.h  cavalry_mem.h  iav_common.h  iav_ioctl.h  iav_vin_common.h  iav_vin_ioctl.h  iav_vout_common.h  iav_vout_ioctl.h  nnctrl.h  vproc.h
platform/src/intel/: CMakeLists.txt
platform/src/intel/inc/: intel.h
platform/src/intel/src/: intel.cpp
platform/src/xilinx/: CMakeLists.txt
platform/src/xilinx/inc/: xilinx.h
platform/src/xilinx/src/: xilinx.cpp
segmentation/: CMakeLists.txt
segmentation/inc/: segmentation.h
segmentation/src/: CMakeLists.txt  segmentation.cpp
segmentation/src/DeepLab/: CMakeLists.txt
segmentation/src/DeepLab/inc/: deeplab.h
segmentation/src/DeepLab/src/: deeplab.cpp
segmentation/src/FCN/: CMakeLists.txt
segmentation/src/FCN/inc/: fcn.h
segmentation/src/FastFCN/: CMakeLists.txt
segmentation/src/FastFCN/inc/: fastfcn.h
segmentation/src/FastFCN/src/: fastfcn.cpp
segmentation/src/Gated-SCNN/: CMakeLists.txt
segmentation/src/Gated-SCNN/inc/: gated-scnn.h
segmentation/src/Gated-SCNN/src/: gated-scnn.cpp
segmentation/src/Mask_R-CNN/: CMakeLists.txt
segmentation/src/Mask_R-CNN/inc/: mask_rcnn.h
segmentation/src/Mask_R-CNN/src/: mask_rcnn.cpp
segmentation/src/u-net/: CMakeLists.txt
segmentation/src/u-net/inc/: unet.h
segmentation/src/u-net/src/: unet.cpp
test_apps/: object_detection_test_main.cpp  segmentation_test_main.cpp
utils/: CMakeLists.txt  deie_logger.cpp  deie_logger.hpp
