add_subdirectory(src)
add_library(targetLib src/target.cpp)

if(INTEL_TARGET)
    ADD_DEFINITIONS(-D_INTEL_TARGET=1)
    find_package(ngraph REQUIRED)
    find_package(InferenceEngine REQUIRED)
    find_package(OpenCV REQUIRED)
    find_package(json)
    target_link_libraries(targetLib PUBLIC ${InferenceEngine_LIBRARIES} ${OpenCV_LIBS} ${NGRAPH_LIBRARIES} PRIVATE intelLib)
    target_include_directories(targetLib PUBLIC inc/ ${PROJECT_SOURCE_DIR}/platform/src/intel/inc ${PROJECT_SOURCE_DIR}/common/inc) 
endif(INTEL_TARGET)

if(XILINX_TARGET)
    ADD_DEFINITIONS(-D_XILINX_TARGET=1)
    target_link_libraries(targetLib PRIVATE xilinxLib)
    target_include_directories(targetLib PUBLIC inc/ ${PROJECT_SOURCE_DIR}/platform/src/xilinx/inc ${PROJECT_SOURCE_DIR}/common/inc) 
endif(XILINX_TARGET)

if(AMBARELLA_TARGET)
    ADD_DEFINITIONS(-D_AMBARELLA_TARGET=1)
    target_link_libraries(targetLib PRIVATE ambarellaLib)
    target_include_directories(targetLib PUBLIC inc/ ${PROJECT_SOURCE_DIR}/platform/src/ambarella/inc ${PROJECT_SOURCE_DIR}/common/inc) 
endif(AMBARELLA_TARGET)
